# git-ai-summarize

./: LICENSE  README.md  pyproject.toml
src/git_ai_summarize/: summarize.py
